[gd_scene load_steps=5 format=3 uid="uid://dn2bswo10j13i"]

[ext_resource type="FontFile" uid="uid://cvh6d11sybw7w" path="res://Fonts/Halloween.ttf" id="1_5tsyr"]
[ext_resource type="Script" path="res://UI/settings_menu.gd" id="1_kp3po"]

[sub_resource type="LabelSettings" id="LabelSettings_o24ey"]
font = ExtResource("1_5tsyr")
font_size = 20

[sub_resource type="Theme" id="Theme_msisq"]
default_font = ExtResource("1_5tsyr")

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kp3po")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
offset_right = 426.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="CenterContainer"]
layout_mode = 2
text = "Settings"
label_settings = SubResource("LabelSettings_o24ey")

[node name="CenterContainer2" type="CenterContainer" parent="."]
layout_mode = 0
offset_right = 426.0
offset_bottom = 240.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer2"]
layout_mode = 2
alignment = 1

[node name="Fullscreen" type="CheckBox" parent="CenterContainer2/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_5tsyr")
text = "Fullscreen?"

[node name="VSync" type="OptionButton" parent="CenterContainer2/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_msisq")
alignment = 1
item_count = 3
selected = 0
popup/item_0/text = "VSync Off"
popup/item_0/id = 0
popup/item_1/text = "VSync Enabled"
popup/item_1/id = 1
popup/item_2/text = "VSync Adaptive"
popup/item_2/id = 2

[node name="Back" type="Button" parent="CenterContainer2/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_5tsyr")
text = "Back"

[connection signal="pressed" from="CenterContainer2/VBoxContainer/Fullscreen" to="." method="_on_fullscreen_pressed"]
[connection signal="item_selected" from="CenterContainer2/VBoxContainer/VSync" to="." method="_on_v_sync_item_selected"]
[connection signal="pressed" from="CenterContainer2/VBoxContainer/Back" to="." method="_on_back_pressed"]
